# mut

./: .gitignore  README.md  package.json  pyproject.toml
doc/: agent_version_management_problem.md  mut_architecture.md  mut_code.md
mut/: __init__.py  __main__.py  cli.py
mut/core/: auth.py  diff.py  ignore.py  manifest.py  merge.py  object_store.py  protocol.py  scope.py  snapshot.py  tree.py
mut/foundation/: config.py  credentials.py  error.py  fs.py  hash.py  transport.py
mut/ops/: cat_op.py  checkout_op.py  clone_op.py  commit_op.py  connect_op.py  daemon_op.py  diff_op.py  init_op.py  link_access_op.py  log_op.py  ls_op.py  notify_op.py  pull_op.py  push_op.py  register_op.py  repo.py  rollback_op.py  show_op.py  stats_op.py  status_op.py  tree_op.py
mut/server/: __main__.py  audit.py  graft.py  handlers.py  history.py  notification.py  repo.py  scope_manager.py  server.py  sync_queue.py  websocket.py
mut/tests/: test_diff.py  test_e2e_merge.sh  test_e2e_server.sh  test_merge.py
tests/: _handlers_shim.py  demo_async_concurrency.sh  demo_full_regression.sh  demo_production_stress.sh  demo_server_features.sh  run_sync.sh  test_async_server.py  test_auth.py  test_auth_enhanced.py  test_connect.py  test_e2e.sh  test_e2e_merge.sh  test_e2e_server.sh  test_enhanced_cli.py  test_error_hierarchy.py  test_fs.py  test_graft.py  test_handlers.py  test_history.py  test_ignore.py  test_integration_v4.py  test_manifest.py  test_merge_strategies.py  test_notification.py  test_object_store.py  test_ops.py  test_protocol.py  test_protocol_negotiation.py  test_rollback.py  test_scope.py  test_scope_migration.py  test_server_e2e.py  test_server_repo.py  test_snapshot.py  test_storage_backend.py  test_stress_concurrent.py  test_sync_queue.py  test_tree.py  test_v4_features.py
(+13 files in other folders)
